--- a/index.html
+++ b/index.html
@@ -6,138 +6,15 @@
     <title>Maze Winner</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="mazestyle.css">
-    <script src="maze_logic.js"></script>
+    <script src="maze_generator.js"></script>
+    <script src="maze_solver.js"></script>
 </head>
 <body>
     <div class="Text">
         <h1>Maze Winner</h1>
         <p>Game Instructions?</p>
     </div>
-    <div id="maze_container" style ="overflow-wrap: break-word; line-height: 14px; letter-spacing: -2px;">
-        <table id="Maze">
-            <tbody>
-                <tr>
-                    <td id="1-1" style="background-color:aqua"></td>
-                    <td id="1-2" style="background-color:aqua"></td>
-                    <td id="1-3" style="background-color:aqua"></td>
-                    <td id="1-4" style="background-color:aqua"></td>
-                    <td id="1-5" style="background-color:aqua"></td>
-                    <td id="1-6" style="background-color:aqua"></td>
-                    <td id="1-7" style="background-color:aqua"></td>
-                    <td id="1-8" style="background-color:aqua"></td>
-                    <td id="1-9" style="background-color:aqua"></td>
-                    <td id="1-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="2-1" style="background-color:aqua"></td>
-                    <td id="2-2" style="background-color:aqua"></td>
-                    <td id="2-3" style="background-color:aqua"></td>
-                    <td id="2-4" style="background-color:aqua"></td>
-                    <td id="2-5" style="background-color:aqua"></td>
-                    <td id="2-6" style="background-color:aqua"></td>
-                    <td id="2-7" style="background-color:aqua"></td>
-                    <td id="2-8" style="background-color:aqua"></td>
-                    <td id="2-9" style="background-color:aqua"></td>
-                    <td id="2-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="3-1" style="background-color:aqua"></td>
-                    <td id="3-2" style="background-color:aqua"></td>
-                    <td id="3-3" style="background-color:aqua"></td>
-                    <td id="3-4" style="background-color:aqua"></td>
-                    <td id="3-5" style="background-color:aqua"></td>
-                    <td id="3-6" style="background-color:aqua"></td>
-                    <td id="3-7" style="background-color:aqua"></td>
-                    <td id="3-8" style="background-color:aqua"></td>
-                    <td id="3-9" style="background-color:aqua"></td>
-                    <td id="3-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="4-1" style="background-color:aqua"></td>
-                    <td id="4-2" style="background-color:aqua"></td>
-                    <td id="4-3" style="background-color:aqua"></td>
-                    <td id="4-4" style="background-color:aqua"></td>
-                    <td id="4-5" style="background-color:aqua"></td>
-                    <td id="4-6" style="background-color:aqua"></td>
-                    <td id="4-7" style="background-color:aqua"></td>
-                    <td id="4-8" style="background-color:aqua"></td>
-                    <td id="4-9" style="background-color:aqua"></td>
-                    <td id="4-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="5-1" style="background-color:aqua"></td>
-                    <td id="5-2" style="background-color:aqua"></td>
-                    <td id="5-3" style="background-color:aqua"></td>
-                    <td id="5-4" style="background-color:aqua"></td>
-                    <td id="5-5" style="background-color:aqua"></td>
-                    <td id="5-6" style="background-color:aqua"></td>
-                    <td id="5-7" style="background-color:aqua"></td>
-                    <td id="5-8" style="background-color:aqua"></td>
-                    <td id="5-9" style="background-color:aqua"></td>
-                    <td id="5-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="6-1" style="background-color:aqua"></td>
-                    <td id="6-2" style="background-color:aqua"></td>
-                    <td id="6-3" style="background-color:aqua"></td>
-                    <td id="6-4" style="background-color:aqua"></td>
-                    <td id="6-5" style="background-color:aqua"></td>
-                    <td id="6-6" style="background-color:aqua"></td>
-                    <td id="6-7" style="background-color:aqua"></td>
-                    <td id="6-8" style="background-color:aqua"></td>
-                    <td id="6-9" style="background-color:aqua"></td>
-                    <td id="6-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="7-1" style="background-color:aqua"></td>
-                    <td id="7-2" style="background-color:aqua"></td>
-                    <td id="7-3" style="background-color:aqua"></td>
-                    <td id="7-4" style="background-color:aqua"></td>
-                    <td id="7-5" style="background-color:aqua"></td>
-                    <td id="7-6" style="background-color:aqua"></td>
-                    <td id="7-7" style="background-color:aqua"></td>
-                    <td id="7-8" style="background-color:aqua"></td>
-                    <td id="7-9" style="background-color:aqua"></td>
-                    <td id="7-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="8-1" style="background-color:aqua"></td>
-                    <td id="8-2" style="background-color:aqua"></td>
-                    <td id="8-3" style="background-color:aqua"></td>
-                    <td id="8-4" style="background-color:aqua"></td>
-                    <td id="8-5" style="background-color:aqua"></td>
-                    <td id="8-6" style="background-color:aqua"></td>
-                    <td id="8-7" style="background-color:aqua"></td>
-                    <td id="8-8" style="background-color:aqua"></td>
-                    <td id="8-9" style="background-color:aqua"></td>
-                    <td id="8-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="9-1" style="background-color:aqua"></td>
-                    <td id="9-2" style="background-color:aqua"></td>
-                    <td id="9-3" style="background-color:aqua"></td>
-                    <td id="9-4" style="background-color:aqua"></td>
-                    <td id="9-5" style="background-color:aqua"></td>
-                    <td id="9-6" style="background-color:aqua"></td>
-                    <td id="9-7" style="background-color:aqua"></td>
-                    <td id="9-8" style="background-color:aqua"></td>
-                    <td id="9-9" style="background-color:aqua"></td>
-                    <td id="9-10" style="background-color:aqua"></td>
-                </tr>
-                <tr>
-                    <td id="10-1" style="background-color:aqua"></td>
-                    <td id="10-2" style="background-color:aqua"></td>
-                    <td id="10-3" style="background-color:aqua"></td>
-                    <td id="10-4" style="background-color:aqua"></td>
-                    <td id="10-5" style="background-color:aqua"></td>
-                    <td id="10-6" style="background-color:aqua"></td>
-                    <td id="10-7" style="background-color:aqua"></td>
-                    <td id="10-8" style="background-color:aqua"></td>
-                    <td id="10-9" style="background-color:aqua"></td>
-                    <td id="10-10" style="background-color:aqua"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+    <canvas id = "maze"></canvas>
+   
 </body>
 </html>
