Finished styling the "look" and set up <canvas>

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Maze Winner</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="mazestyle.css">
-    <script src="maze_generator.js"></script>
-    <script src="maze_solver.js"></script>
+    
 </head>
 <body>
-    <div class="Text">
+    <div class="info_text">
         <h1>Maze Winner</h1>
         <p>Game Instructions?</p>
     </div>
-    <canvas id = "maze"></canvas>
-   
+    <canvas id = "canvas" width = "500" height = "500" style = "border:1px solid #000000" ></canvas>
+    <script src="maze_generator.js"></script>
+    <script src="maze_solver.js"></script>
 </body>
 </html>
