--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Maze Winner</h1>
         <p>Game Instructions?</p>
     </div>
-    <canvas id = "canvas" width = "500" height = "500" style = "border:1px solid #000000" ></canvas>
+    <canvas id = "canvas" height = "500" width = "500" ></canvas>
     <script src="maze_generator.js"></script>
     <script src="maze_solver.js"></script>
 </body>
