--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="info_text">
         <h1>Maze Winner</h1>
-        <p>Game Instructions?</p>
+        <p>Game Instructions</p>
     </div>
     <canvas id = "canvas" height = "500" width = "500" ></canvas>
     <script src="maze_generator.js"></script>
