--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="info_text">
-        <h1>Maze Winner</h1>
+        <h1>Maze Generator</h1>
         <p>Select a search algorithm from the dropdown to generate a maze.</p>
     </div>
     <select id = "left_dropdown" onchange = "generateMaze(this.value)">
